# belajar_pemrogramman_rust

any_trait/: Cargo.toml
any_trait/src/: main.rs
belajar_rust/: .gitignore
belajar_rust/src/: main.rs  main.rs_bak
belajar_rust/src/chapter11/: account.py  mod.rs  trait_bound.rs  trait_definisi.rs  trait_std_lib_cmp.rs  trait_std_library.rs  trait_type_system.rs  trait_type_system_generic.rs  trait_with_generic.rs
belajar_rust/src/chapter12/: mod.rs  node_without_box.rs  rc_1.rs  rc_refcell.rs  rc_weak.rs  refcell.rs  smart_pointer_12_1.rs  sp_box.rs
belajar_rust/src/chapter13/: atomic_rc.rs  closure_with_variable.rs  joinhandle.rs  mod.rs  mpsc.rs  mutex.rs  mutex_poison.rs  scoped_thread.rs  send_sync.rs  server_request.rs  spawning_thread.rs
belajar_rust/src/chapter14/: builder.rs  mod.rs  no_builder.rs  with_generic.rs  with_state.rs
belajar_rust/src/chapter14_builder/: demo.rs  entry.rs  mod.rs  structs.rs  traits.rs
chapter17_async/lasync/: Cargo.toml  mytext.txt
chapter17_async/ltokio/: Cargo.toml
chapter17_async/ltokio/src/: filesys.rs  lib.rs  main.rs  main1.rs  observer.rs
default_trait/src/: main.rs
drop-trait/src/: main.rs
pmacro/: Cargo.toml
pmacro/app/: Cargo.toml
pmacro/mymacro/: Cargo.toml
python/: main.py
randomku/: Cargo.toml  README.md
randomku/src/: lib.rs  main.rs
rust_const/: Cargo.toml
rust_const/src/: main.rs  one.rs  three.rs  two.rs
rust_macro/src/: decl_impl.rs  decl_multi_arm.rs  declarative.rs  main.rs  traits.rs
trait_adv/: Cargo.toml
trait_adv/src/: main.rs  trait_obj.rs
unit-test/src/: lib.rs
(+50 files in other folders)
