[package]
name = "ltokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", features = ["futures-executor"] }
tokio = { version = "1.29.1", features = ["tokio-macros", "macros", "rt-multi-thread", "time", "fs", "io-std", "io-util"] }
